# software_analysis_agent

./: .gitignore  README.md  pyproject.toml  software_design_process.md
src/software_analysis_agent/: crew.py  main.py
src/software_analysis_agent/config/: agents.yaml  tasks.yaml
src/software_analysis_agent/tools/: tavily_tool.py
